# new-macro

./: Cargo.toml  LICENSE  README.md
.github/workflows/: run_release.yml  run_tests.yml
new-macro/: Cargo.toml
new-macro/src/: lib.rs  new.rs
new-macro/tests/: tests.rs
new-macro/tests/expand/: test_empty_struct.expanded.rs  test_empty_struct.rs  test_multi_member_struct.rs  test_simple_struct.expanded.rs  test_simple_struct.rs
playground/: Cargo.toml
playground/src/: main.rs
src/: lib.rs  new.rs
tests/expand/: test_multi_member_struct.expanded.rs  test_mutli_member_struct_with_default.expanded.rs  test_mutli_member_struct_with_default.rs  test_simple_struct_with_default.expanded.rs  test_simple_struct_with_default.rs  test_struct_with_const_param.expanded.rs  test_struct_with_const_param.rs  test_struct_with_lifetime.expanded.rs  test_struct_with_lifetime.rs
