[package]
name = "lilys-new-macro"
description = "Macro for generating a 'new' constructor function"
version = "0.1.1"
edition = "2021"
authors = [ "Lily Easterday" ]
repository = "https://github.com/jmeaster30/new-macro"
readme = "README.md"
license = "MIT"
categories = [ "development-tools", "development-tools::build-utils" ]
keywords = [ "derive", "macro", "struct", "new", "constructor" ]
exclude = [ "./playground" ]

[lib]
path = "src/lib.rs"
name = "new_macro"
proc-macro = true

[dependencies]
quote = "1.0.39"
syn = { version = "2.0.100", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.94"

[dev-dependencies]
macrotest = "1.1.0"