[package]
name = "new-macro"
authors = [ "Lily Easterday" ]

version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "new_macro"
proc-macro = true

[dependencies]
quote = "*"
syn = { version = "2.0.55", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.78"

[dev-dependencies]
macrotest = "1"