[package]
name = "new-macro"
description = "Macro for generating a 'new' constructor function"
version = "0.1.0"
edition = "2021"
authors = [ "Lily Easterday" ]
repository = "https://github.com/jmeaster30/new-macro"
license-file = "LICENSE"
categories = [ "development-tools", "development-tools::build-utils" ]
keywords = [ "derive", "macro", "struct", "new", "constructor" ]

[lib]
path = "src/lib.rs"
name = "new_macro"
proc-macro = true

[dependencies]
quote = "*"
syn = { version = "2.0.55", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.78"

[dev-dependencies]
macrotest = "1"